--- a/LabBook.org
+++ b/LabBook.org
@@ -3202,6 +3202,25 @@ sudo likwid-perfctr -t 225ms -f -c N:0-31 -g L3CACHE $sp_command >> log_NASExp2/
 sudo likwid-perfctr -t 110ms -f -c N:0-31 -g L3CACHE $ua_command >> log_NASExp2/saidaUa_2.log 2>> log_NASExp2/saidaUa_1.log 
 
 #+end_src
+
+- Execução o FT com 100ms, conforme solicitado pelo professor Lucas.
+
+#+begin_src sh :results output :exports both :tangle scripts/scriptOfExecutionNASDoFT_expl2e3.bash
+
+#!bin/bash
+rm -rf log_NASExp2FT
+mkdir log_NASExp2FT
+
+benchpath=/home/aulapinroot/Programs/NPB3.3.1/NPB3.3-OMP/bin
+
+ft_command=$benchpath/ft.B.x
+
+sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L3CACHE $ft_command >> log_NASExp2/saidaFt100l3_2.log 2>> log_NASExp2/saidaFt100l3_1.log 
+
+sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L2CACHE $ft_command >> log_NASExp2/saidaFt100l2_2.log 2>> log_NASExp2/saidaFt100l2_1.log 
+
+#+end_src
+
 ** Análise dos dados
 
 - Acho que o primeiro passo é tratar os arquivos gerados pelo
@@ -3601,7 +3620,6 @@ else
   calculada pela média de cache misses total (cache
   L2 e L3). Possibilitando uma análise comparativa com as demais regiões da
   aplicação.
-
 
 * 2016-08-20 Take a look at graph500 data
 
